# opentitan

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  WORKSPACE  basic_owner.h  bind.sh  empty_owner.json5  fake_owner.json5  ownership_demo.sh  proda_owner.json5  rebind.py  sival_owner.json5
hw/: BUILD
hw/ip/otp_ctrl/data/: BUILD
hw/top_earlgrey/: BUILD
hw/top_earlgrey/dv/: verilator_sim_cfg.hjson
hw/top_earlgrey/sw/autogen/: BUILD
quality/: BUILD.bazel
rules/: autogen.bzl  bugfix.bzl  const.bzl  extensions.bzl  hub.bzl  json.bzl  opentitan.bzl  ownership.bzl  tock.bzl
rules/opentitan/: defs.bzl  splice.bzl
signing/: BUILD
sw/device/: BUILD
sw/device/boot_rom/: BUILD
sw/device/examples/: BUILD
sw/device/examples/hello_world/: BUILD
sw/device/examples/mldsa/: README.md
sw/device/examples/mldsa/data/: foo.pk  foo.sk  foo_pk.h  fw.pk  message.h  signature.h
sw/device/examples/mldsa/fw/: BUILD.bazel  fips202.h  keygen_bm.c  rand.c  rand.h  shake.c  shake_test.c  sign_bm.c  sign_test.c  verify_bm.c  verify_test.c
sw/device/examples/mldsa/ossl/: BUILD.bazel  common.h  ossl_helpers.c  ossl_sha3.c  rand.c  rand.h  sha3.c  sha3.h  sha3_ops.h
sw/device/examples/mldsa/ref/: BUILD.bazel  api.h  config.h  demo.c  poly.c  reduce.c  sign.c  sign.h  symmetric-shake.c
sw/device/examples/slhdsa/: README.md
sw/device/examples/slhdsa/fw/: BUILD.bazel  keygen_bm.c  sign_bm.c  verify_bm.c
sw/device/examples/slhdsa/ref/: BUILD.bazel  api.h  demo.c  hash_sha2.c  params.h  randombytes.h  rng_earlgrey.c  rng_lcg.c  thash_sha2_simple.c
sw/device/examples/slhdsa/ref/params/: params-sphincs-haraka-128f.h  params-sphincs-haraka-128s.h  params-sphincs-haraka-192f.h  params-sphincs-haraka-192s.h  params-sphincs-haraka-256f.h  params-sphincs-haraka-256s.h  params-sphincs-sha2-128f.h  params-sphincs-sha2-128s.h  params-sphincs-sha2-192f.h  params-sphincs-sha2-192s.h  params-sphincs-sha2-256f.h  params-sphincs-sha2-256s.h  params-sphincs-shake-128f.h  params-sphincs-shake-128s.h  params-sphincs-shake-192f.h  params-sphincs-shake-192s.h  params-sphincs-shake-256f.h  params-sphincs-shake-256s.h
sw/device/examples/teacup_demos/: BUILD  teacup_synth_demo.c
sw/device/exts/common/: BUILD
sw/device/lib/: BUILD
sw/device/lib/arch/: BUILD
sw/device/lib/base/: BUILD  macros.h
sw/device/lib/base/freestanding/: BUILD
sw/device/lib/base/testing/: BUILD
sw/device/lib/crt/: BUILD
sw/device/lib/crypto/: BUILD  bind.sh
sw/device/lib/crypto/drivers/: hmac.c  keymgr.c  keymgr.h
sw/device/lib/crypto/impl/: BUILD  dice.c  dice_functest.c
sw/device/lib/crypto/include/: BUILD  dice.h  otcrypto.h
sw/device/lib/dif/: BUILD
sw/device/lib/runtime/: BUILD  ibex.h
sw/device/lib/testing/: BUILD  hexstr.h  mask_rom_test.h
sw/device/lib/testing/test_framework/: ottf_console.c
sw/device/silicon_creator/lib/: BUILD  boot_log.h  dbg_print.c  dbg_print.h  error.h  manifest.h  nonce.h  otbn_boot_services.h  stack_utilization.c  stack_utilization.h  timer.c  timer.h  xmodem.c  xmodem.h
sw/device/silicon_creator/lib/base/: BUILD  chip.h
sw/device/silicon_creator/lib/boot_svc/: boot_svc_ownership_activate.c  boot_svc_ownership_activate.h  boot_svc_ownership_unlock.c  boot_svc_ownership_unlock.h
sw/device/silicon_creator/lib/dfu/: BUILD
sw/device/silicon_creator/lib/drivers/: BUILD  flash_ctrl.c  flash_ctrl.h  flash_ctrl_unittest.cc  hmac_functest.c  ibex.c  ibex.h  kmac.c  kmac.h  meson.build  mock_flash_ctrl.h  mock_spi_device.cc  mock_spi_device.h  otbn.c  pinmux.c  pinmux.h  spi_device.c  spi_device.h  spi_device_unittest.cc  stdusb.c  stdusb.h  uart.c  uart.h  uart_functest.c  usb.c  usb.h  usb_enumerate_functest.c  usb_functest.c  watchdog.c  watchdog.h  watchdog_functest.c  watchdog_unittest.cc
sw/device/silicon_creator/lib/ownership/: BUILD  datatypes.h  ecdsa.c  ecdsa.h  ecdsa_functest.c  owner.c  owner.h  owner_block.c  owner_block.h  owner_block_unittest.cc  owner_keys.h  ownership.c  ownership.h  ownership_activate.c  ownership_activate.h  ownership_activate_unittest.cc  ownership_unlock.c  ownership_unlock.h  test_owner.c
sw/device/silicon_creator/lib/rescue/: BUILD  dfu.c  dfu.h  dfu_state_table.c  rescue.c  rescue.h  rescue_spi.c  rescue_usb.c  rescue_usbdfu.c  rescue_xmodem.c  sfdp.c  xmodem_testlib.h
sw/device/silicon_creator/lib/sigverify/: mod_exp_ibex.c  sigverify.c
sw/device/silicon_creator/manuf/base/: BUILD  perso_tlv_print.c
sw/device/silicon_creator/mask_rom/: BUILD
sw/device/silicon_creator/rom/: BUILD  rom.c  rom.ld  rom_isrs.S  rom_start.S
sw/device/silicon_creator/rom/binaries/: rom_with_real_keys_fpga_cw310.elf
sw/device/silicon_creator/rom_ext/: BUILD  bootstrap.c  rescue.c  rescue.h  rom_ext.c  rom_ext_boot_policy.c
sw/device/silicon_creator/rom_ext/doc/: boot_flow.md
sw/device/silicon_creator/rom_ext/sival/: BUILD
sw/device/silicon_creator/rom_exts/: BUILD
sw/device/silicon_creator/testing/: meson.build
sw/device/silicon_owner/bare_metal/: bare_metal_start.S
sw/device/silicon_owner/tock/kernel/: BUILD
sw/device/tests/: BUILD  aon_timer_wakeup_test.c  aon_timer_wdog_irq_test.c
sw/host/: Cargo.toml
sw/host/hsmtool/: BUILD
sw/host/hsmtool/src/: module.rs
sw/host/hsmtool/src/extra/: spxkms.rs
sw/host/opentitanlib/: BUILD
sw/host/opentitanlib/bindgen/: BUILD  lib.rs
sw/host/opentitanlib/src/: lib.rs
sw/host/opentitanlib/src/chip/: helper.rs  (+3 more)
sw/host/opentitantool/: BUILD  Cargo.toml
sw/host/opentitantool/opentitantool_derive/: BUILD
sw/host/opentitantool/opentitantool_derive/src/: lib.rs
sw/host/opentitantool/src/: main.rs
sw/host/opentitantool/src/command/: ecdsa.rs  ownership.rs  rescue.rs  rsa.rs  spi.rs  xmodem.rs
sw/host/sphincsplus/: BUILD  error.rs  lib.rs  sha2_128s_simple.rs  shake_128s_simple.rs  variants.rs
sw/host/tests/ownership/: flash_permission_test.rs  rescue_limit_test.rs  rescue_permission_test.rs  transfer_lib.rs  transfer_test.rs
test/systemtest/: config.py
util/: BUILD  get_workspace_status.sh  opentitantool_test_runner.sh  rom_chip_info.py
util/sh/scripts/: bin2c.sh
(+99 files in other folders)
