load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

package(default_visibility = ["//visibility:public"])

string_flag(
    name = "mode",
    build_setting_default = "5",
    values = ["2", "3", "5"],
)

config_setting(name="mode2", flag_values = {":mode": "2"})
config_setting(name="mode3", flag_values = {":mode": "3"})
config_setting(name="mode5", flag_values = {":mode": "5"})

alias(
    name = "shake",
    actual = select({
        "//toolchain:on_device_config": "//sw/device/examples/mldsa/fw:shake",
        "//conditions:default": "//sw/device/examples/mldsa/ossl:sha3",

    }),
)
alias(
    name = "rand",
    actual = select({
        "//toolchain:on_device_config": "//sw/device/examples/mldsa/fw:rand",
        "//conditions:default": "//sw/device/examples/mldsa/ossl:rand",
    }),
)

cc_library(
    name = "ml_dsa",
    copts = [
        "-Wno-implicit-int-conversion",
        "-Wno-sign-conversion",
    ],
    defines = [
    ] + select({
        ":mode2": ["DILITHIUM_MODE=2"],
        ":mode3": ["DILITHIUM_MODE=3"],
        ":mode5": ["DILITHIUM_MODE=5"],
    }),
    srcs = [
        "ntt.c",
        "ntt.h",
        "packing.c",
        "packing.h",
        "poly.c",
        "poly.h",
        "polyvec.c",
        "polyvec.h",
        "reduce.c",
        "reduce.h",
        "rounding.c",
        "rounding.h",
        "sign.c",
        "sign.h",
        "symmetric-shake.c",
        "params.h",
        "symmetric.h",
    ],
    hdrs = [
        "api.h",
        "config.h",
    ],
    deps = [
        ":shake",
        ":rand",
    ],
)

cc_binary(
    name = "demo",
    srcs = ["demo.c"],
    deps = [
        ":ml_dsa",
    ],
)
